# CosmoBrowse

./: .gitignore  README.md  README.txt  ROADMAP.md  TODO.md
saba/: Cargo.toml  rust-toolchain.toml
saba/adapter_cli/: Cargo.toml
saba/adapter_cli/src/: main.rs
saba/adapter_native/: Cargo.toml
saba/adapter_native/src/: lib.rs
saba/cosmo_app_legacy/: Cargo.toml
saba/cosmo_app_legacy/src/: download.rs  lib.rs  loader.rs  model.rs  security.rs  session.rs
saba/cosmo_app_legacy/src/layout/: mod.rs
saba/cosmo_core/: Cargo.toml
saba/cosmo_core/src/: js_runtime.rs  lib.rs  paint_commands.rs  paint_mapper.rs
saba/cosmo_core/tests/snapshots/: paint_commands_basic.json
saba/cosmo_core_legacy/: Cargo.toml
saba/cosmo_core_legacy/src/: display_item.rs  http.rs
saba/cosmo_core_legacy/src/renderer/: page.rs
saba/cosmo_core_legacy/src/renderer/css/: cssom.rs  token.rs
saba/cosmo_core_legacy/src/renderer/dom/: api.rs  node.rs
saba/cosmo_core_legacy/src/renderer/html/: parser.rs  token.rs
saba/cosmo_core_legacy/src/renderer/js/: runtime.rs
saba/cosmo_core_legacy/src/renderer/layout/: computed_style.rs  layout_object.rs  layout_view.rs
saba/cosmo_runtime/: Cargo.toml
saba/cosmo_runtime/src/: lib.rs
saba/net/wasabi/: Cargo.toml
saba/net/wasabi/src/: http.rs
saba/renderer-wasm/: Cargo.toml
saba/renderer-wasm/src/: lib.rs
saba/renderer_native/: Cargo.toml
saba/renderer_native/src/: app_bridge.rs  color.rs  hit_test.rs  main.rs  painter.rs  text_render.rs  ui_chrome.rs
saba/saba_app/: Cargo.toml
saba/saba_app/src/: lib.rs  loader.rs  model.rs  security.rs  session.rs
saba/saba_app/src/layout/: mod.rs
saba/saba_core/src/: display_item.rs  url.rs
saba/saba_core/src/renderer/: page.rs
saba/saba_core/src/renderer/dom/: api.rs
saba/saba_core/src/renderer/html/: parser.rs
saba/saba_core/src/renderer/js/: runtime.rs
saba/saba_core/src/renderer/layout/: computed_style.rs  layout_object.rs  layout_view.rs  mod.rs
saba/src/: lib.rs  main.rs
saba/target-local/: .rustc_info.json
saba/target-local/debug/.fingerprint/adler2-d1e16e8a582c93ab/: lib-adler2  lib-adler2.json
saba/target-local/debug/.fingerprint/aho-corasick-82450f89924e5bb1/: lib-aho_corasick  lib-aho_corasick.json
saba/target-local/debug/.fingerprint/aho-corasick-a4915bf7ee44b552/: lib-aho_corasick  lib-aho_corasick.json
saba/target-local/debug/.fingerprint/aho-corasick-e53979415f7b97c8/: lib-aho_corasick  lib-aho_corasick.json
saba/target-local/debug/.fingerprint/alloc-no-stdlib-4679d5efd54dafd8/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
saba/target-local/debug/.fingerprint/alloc-no-stdlib-92ed56c6b914e73a/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
saba/target-local/debug/.fingerprint/alloc-stdlib-36c68f0dfde2cd0e/: lib-alloc_stdlib  lib-alloc_stdlib.json
saba/target-local/debug/.fingerprint/alloc-stdlib-62da0d0e55f37590/: lib-alloc_stdlib  lib-alloc_stdlib.json
saba/target-local/debug/.fingerprint/anyhow-11ad8ede9f4b8b45/: run-build-script-build-script-build  run-build-script-build-script-build.json
saba/target-local/debug/.fingerprint/anyhow-391da6addefe58a6/: lib-anyhow  lib-anyhow.json
saba/target-local/debug/.fingerprint/anyhow-7d931f305591f642/: lib-anyhow  lib-anyhow.json
saba/target-local/debug/.fingerprint/anyhow-c8f85c9944df2be7/: build-script-build-script-build  build-script-build-script-build.json
saba/target-local/debug/.fingerprint/atomic-waker-da9a01f7dc236e82/: lib-atomic_waker  lib-atomic_waker.json
saba/target-local/debug/.fingerprint/atomic-waker-f1278d2645921f3c/: lib-atomic_waker  (+1 more)
saba/testdata/abehiroshi/: index.htm  menu.htm  top.htm
saba/testdata/abehiroshi/prof/: prof.htm
saba/testdata/js_event_loop/: e7_t2_spa.html  e7_t2_static.html  minimal.html
saba/testdata/legacy_frames/: menu.htm  nested.htm  noframes.htm  prof.htm  top.htm
saba/ui/cosmo-browse-ui/: index.html  package-lock.json  package.json  tsconfig.json
saba/ui/cosmo-browse-ui/src/: main.ts  styles.css  tauri-shims.d.ts
saba/ui/cosmo-browse-ui/src-tauri/: Cargo.toml  tauri.conf.json
saba/ui/wasabi/: Cargo.toml
saba/ui/wasabi/src/: app.rs
(+1199 files in other folders)
