workspace = { members = [ "adapter_cli", "net/wasabi", "saba_core", "saba_app", "cosmo_core", "cosmo_runtime", "ui/wasabi", "renderer-wasm", "ui/cosmo-browse-ui/src-tauri"] }

[package]
authors = ["pkaiy81"]
name = "saba"
version = "0.1.0"
edition = "2021"
default-run = "saba"

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:ui_wasabi", "dep:noli"]

[[bin]]
name = "saba"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
cosmo_core = { path = "./cosmo_core" }
net_wasabi = { path = "./net/wasabi", optional = true }
ui_wasabi = { path = "./ui/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }