workspace = { members = [ "adapter_cli", "adapter_native", "net/wasabi", "cosmo_core_legacy", "cosmo_app_legacy", "cosmo_core", "cosmo_runtime", "ui/wasabi", "renderer-wasm", "ui/cosmo-browse-ui/src-tauri", "renderer_native"] }

[package]
authors = ["pkaiy81"]
name = "cosmo_browse"
version = "0.1.0"
edition = "2021"
default-run = "cosmo_browse"

[features]
default = ["wasabi"]
wasabi = ["dep:net_wasabi", "dep:ui_wasabi", "dep:noli"]

[[bin]]
name = "cosmo_browse"
path = "src/main.rs"
required-features = ["wasabi"]

[dependencies]
cosmo_core = { path = "./cosmo_core" }
net_wasabi = { path = "./net/wasabi", optional = true }
ui_wasabi = { path = "./ui/wasabi", optional = true }
noli = { git = "https://github.com/hikalium/wasabi.git", branch = "for_saba", optional = true }
