workspace = { members = [ "adapter_cli", "adapter_native", "net/wasabi", "cosmo_core_legacy", "cosmo_app_legacy", "cosmo_core", "cosmo_runtime", "renderer_native"] }
# Excluded from workspace (platform-specific or out-of-sync):
# - "ui/wasabi"                     — requires target_os = "none" (wasabi OS)
# - "renderer-wasm"                 — struct field mismatch with core changes
# - "ui/cosmo-browse-ui/src-tauri"  — requires glib system library (Tauri desktop)

[package]
authors = ["pkaiy81"]
name = "cosmo_browse"
version = "0.1.0"
edition = "2021"

# The wasabi OS binary (src/main.rs) requires noli/net_wasabi/ui_wasabi
# and only builds with target_os = "none". On a regular host, only
# the workspace member crates are built.
autobins = false

[features]
default = []

[dependencies]
cosmo_core = { path = "./cosmo_core" }
