[package]
name = "cosmo_app_legacy"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
cosmo_core = { path = "../cosmo_core" }
encoding_rs = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
url = "2"
