[package]
name = "renderer_native"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "cosmo_browse_native"
path = "src/main.rs"

[dependencies]
adapter_native = { path = "../adapter_native" }
cosmo_runtime = { path = "../cosmo_runtime" }
cosmo_core = { path = "../cosmo_core" }
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.11"
fontdue = "0.9"
