[package]
name = "saba_app"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
encoding_rs = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
saba_core = { path = "../saba_core" }
serde = { version = "1", features = ["derive"] }
url = "2"

